# local-ci

./: .gitignore  Cargo.toml
cli/: Cargo.toml
cli/src/: args.rs  cache.rs  command.rs  error.rs  files.rs  main.rs
cli/src/cache/: error.rs  file_id.rs  mod.rs
cli/src/command/: error.rs  mod.rs
cli/test_files/: not-nested  not-nested.js  not-nested.ts  not-nested.txt
cli/test_files/dir/: nested  nested.js  nested.ts  nested.txt
common/: Cargo.toml
common/src/: canonicalized_path.rs  lib.rs  opaque_error.rs
common/src/fs/: error.rs  fs_facade.rs  mod.rs  relative_path.rs
scripts/: cli_test.sh  command.sh  lib.sh  seed_test_files.sh
work_skipping/: Cargo.toml
work_skipping/src/: canonicalized_path.rs  config.rs  error.rs  lib.rs  run_result.rs
work_skipping/src/cache/: base.rs  error.rs  mod.rs
work_skipping/src/cache/fs/: error.rs  file_id.rs  mod.rs
work_skipping/src/command/: error.rs  mod.rs
work_skipping/tests/: work_skipping.rs
work_skipping/tests/script-fixtures/: expected_not_to_run_twice  should_run_only_once.sh
work_skipping/tests/util/: mod.rs
